org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Property/002_Property_derived_prop_opposite.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */

using kermeta::standard

package test {
	
	class Main {
		operation main() : Void is do
		end
	}
	
	class A
	{
		attribute b : B
		
		property b_derived : B#a
		getter is do
			result:=b
		end
			
	}
	
	
	class B {
	
		reference a : A#b_derived
		
		property a_derived : A
		getter is do
			result:=a
		end
		
	}
	

}

